<resources>
    <string name="app_name">Coffee</string>
    <string name="action_settings">Settings</string>
    <string name="quantity_text">Quantity</string>
    <string name="order_button">Order</string>
    <string name="quantity_no">0</string>
    <string name="minus">-</string>
    <string name="add">+</string>
    <string name="amount">$0</string>
    <string name="price">Price</string>
</resources>
